Minor modifications made

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,10 +9,10 @@
 <body>
     <div class="video-inline-container" id="video-inline-container">
         <div class="videoContainer">
-            <video id="remoteVideo" src="./3 Body Problem S01E07 - Only Advance (Awafim.tv).mkv" autoplay playsinline muted></video>
-            <!-- <video id="remoteVideo" autoplay playsinline></video> -->
-            <!-- <video id="localVideo" class="localVideo" autoplay playsinline muted></video> -->
-            <video id="localVideo" src="./3 Body Problem S01E07 - Only Advance (Awafim.tv).mkv" class="localVideo" autoplay playsinline muted></video>
+            <!-- <video id="remoteVideo" src="./3 Body Problem S01E07 - Only Advance (Awafim.tv).mkv" autoplay playsinline muted></video> -->
+            <video id="remoteVideo" autoplay playsinline></video>
+            <video id="localVideo" class="localVideo" autoplay playsinline muted></video>
+            <!-- <video id="localVideo" src="./3 Body Problem S01E07 - Only Advance (Awafim.tv).mkv" class="localVideo" autoplay playsinline muted></video> -->
         </div>
     </div>
     <audio id="audioStream" autoplay playsinline></audio>
